@@ -196,8 +196,8 @@ arch_netboot_dir:
 		DEBIAN_VERSION "$(DEBIAN_VERSION)" \
 		BUILD_DATE "$(BUILD_DATE)" \
 		SYSDIR "$(BOOT_SCREEN_DIR)" \
-		KERNEL debian-installer/$(ARCH)/linux \
-		INITRD debian-installer/$(ARCH)/initrd.gz \
+		KERNEL $(NETBOOT_PATH)/linux \
+		INITRD $(NETBOOT_PATH)/initrd.gz \
 		VIDEO_MODE $(VIDEO_MODE) \
 	> $(TEMP_NETBOOT_DIR)/$(NETBOOT_PATH)/pxelinux.cfg/default
 	
@@ -207,8 +207,8 @@ arch_netboot_dir:
 		DEBIAN_VERSION "$(DEBIAN_VERSION)" \
 		BUILD_DATE "$(BUILD_DATE)" \
 		SYSDIR "$(BOOT_SCREEN_DIR)" \
-		KERNEL debian-installer/$(ARCH)/linux \
-		INITRD debian-installer/$(ARCH)/initrd.gz \
+		KERNEL $(NETBOOT_PATH)/linux \
+		INITRD $(NETBOOT_PATH)/initrd.gz \
 		CONSOLE "console=ttyS0,9600n8" SYSLINUX_SERIAL \
 		"SERIAL 0 9600 0" \
 		VIDEO_MODE $(VIDEO_MODE) \
